docs/sf-export/sfdx-raw/objects/Debt__c/Debt__c.object-meta.xml
<CustomObject>
    <label>Debt</label>
    <nameField>
        <displayFormat>Debt-{0000}</displayFormat>
        <label>Debts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>