docs/sf-export/sfdx-raw/objects/Debt__c/fields/Original_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Original_Creditor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Original Creditor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Creditor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>